--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,10 @@
 Django>=1.9,<1.10
 djangorestframework
 djangorestframework-filters
-PyYAML
-Markdown
-django-markdown
-django-markup
+MySQL-python
+django-suit==0.2.23
+django-suit-redactor
+django-suit-ckeditor
+django-ckeditor
+Pillow
 MySQL-python
