--- a/requirements.txt
+++ b/requirements.txt
@@ -1,21 +1,21 @@
-Django>=1.9,<1.10
-djangorestframework
-djangorestframework-filters
+Django==1.9.11
+djangorestframework==3.5.3
+djangorestframework-filters==0.9.1
 django-rest-swagger==0.3.10
-MySQL-python
+MySQL-python==1.2.5
 django-suit==0.2.23
-django-suit-redactor
-django-suit-ckeditor
-django-forms-bootstrap
-django-favicon
-Pillow
-django-constance[database]
-django-ckeditor
-django-mptt
-django-media-manager
-django-modeltranslation
-django-geoposition
-Django-Select2
-django-daterange-filter
+django-suit-ckeditor==0.0.2
+django-suit-redactor==0.0.4
+django-forms-bootstrap==3.0.1
+django-favicon==0.1.3
+Pillow==3.4.2
+django-constance[database]==1.3.4
+django-ckeditor==5.2.1
+django-mptt==0.8.7
+django-media-manager==3.4.1
+django-modeltranslation==0.12.1
+django-geoposition==0.3.0
+Django-Select2==5.10.0
+django-daterange-filter==1.3.0
 django-extensions
 pytz
