--- a/requirements.txt
+++ b/requirements.txt
@@ -12,7 +12,7 @@ Pillow==3.4.2
 django-constance[database]==1.3.4
 django-ckeditor==5.2.1
 django-mptt==0.8.7
-#django-media-manager==3.4.1
+django-media-manager==3.4.2
 django-modeltranslation==0.12.1
 django-geoposition==0.3.0
 Django-Select2==5.10.0
@@ -20,6 +20,4 @@ django-daterange-filter==1.3.0
 django-extensions
 pytz
 numpy
-scipy
-matplotlib
 celery
