--- a/requirements.txt
+++ b/requirements.txt
@@ -17,7 +17,7 @@ django-modeltranslation==0.12.1
 django-geoposition==0.3.0
 Django-Select2==5.10.0
 django-daterange-filter==1.3.0
+celery==4.1.0
 django-extensions
 pytz
 numpy
-celery
