--- a/requirements.txt
+++ b/requirements.txt
@@ -18,6 +18,7 @@ django-geoposition==0.3.0
 Django-Select2==5.10.0
 django-daterange-filter==1.3.0
 celery==4.1.0
+yandex.translate==0.3.5
 flower
 django-extensions
 pytz
