--- a/requirements.txt
+++ b/requirements.txt
@@ -1,26 +1,49 @@
+Babel==2.6.0
 Django==1.9.11
-djangorestframework==3.5.3
-djangorestframework-filters==0.9.1
-django-rest-swagger==0.3.10
+Django-Select2==5.10.0
 MySQL-python==1.2.5
+Pillow==3.4.2
+PyYAML==3.12
+amqp==2.3.2
+argparse==1.2.1
+backports-abc==0.5
+backports.ssl-match-hostname==3.5.0.1
+billiard==3.5.0.3
+celery==4.1.1
+certifi==2018.4.16
+chardet==3.0.4
+django-appconf==1.0.2
+django-ckeditor==5.2.1
+django-constance==1.3.4
+django-daterange-filter==1.3.0
+django-extensions==2.0.7
+django-favicon==0.1.3
+django-filter==0.15.3
+django-forms-bootstrap==3.0.1
+django-geoposition==0.3.0
+django-media-manager==3.4.2
+django-modeltranslation==0.12.1
+django-mptt==0.8.7
+django-picklefield==1.0.0
+django-rest-swagger==0.3.10
 django-suit==0.2.23
 django-suit-ckeditor==0.0.2
 django-suit-redactor==0.0.4
-django-forms-bootstrap==3.0.1
-django-favicon==0.1.3
-Pillow==3.4.2
-django-constance[database]==1.3.4
-django-ckeditor==5.2.1
-django-mptt==0.8.7
-django-media-manager==3.4.2
-django-modeltranslation==0.12.1
-django-geoposition==0.3.0
-Django-Select2==5.10.0
-django-daterange-filter==1.3.0
-celery==4.1.0
+djangorestframework==3.5.3
+djangorestframework-filters==0.9.1
+flower==0.9.2
+futures==3.2.0
+idna==2.7
+kombu==4.2.1
+numpy==1.14.5
+pytz==2018.5
+requests==2.19.1
+scipy==1.1.0
+singledispatch==3.4.0.3
+six==1.11.0
+tornado==4.5.3
+typing==3.6.4
+urllib3==1.23
+vine==1.1.4
+wsgiref==0.1.2
 yandex.translate==0.3.5
-flower
-django-extensions
-pytz
-numpy
-scipy
