--- a/requirements.txt
+++ b/requirements.txt
@@ -49,4 +49,4 @@ wsgiref==0.1.2
 yandex.translate==0.3.5
 lxml==4.2.5
 python-docx==0.8.7
-django-formsetfield
+-e git+https://github.com/arybin93/django-formsetfield.git@13874b1bac3ae8497b13eebb3cbde361685b82f5#egg=django-formsetfield
