--- a/requirements.txt
+++ b/requirements.txt
@@ -1,52 +1,30 @@
-Babel==2.6.0
-Django==1.9.11
-Django-Select2==5.10.0
-MySQL-python==1.2.5
-Pillow==3.4.2
-PyYAML==3.12
-amqp==2.3.2
-argparse==1.2.1
-backports-abc==0.5
-backports.ssl-match-hostname==3.5.0.1
-billiard==3.5.0.3
-celery==4.1.1
-certifi==2018.4.16
-chardet==3.0.4
-django-appconf==1.0.2
-django-ckeditor==5.2.1
-django-constance==1.3.4
+celery==4.2.1
+Django==2.0
+django-ckeditor==5.6.1
+django-constance==2.3.1
 django-daterange-filter==1.3.0
-django-extensions==2.0.7
+django-extensions==2.1.3
 django-favicon==0.1.3
-django-filter==0.15.3
-django-forms-bootstrap==3.0.1
+django-filter==2.0.0
+django-forms-bootstrap==3.1.0
 django-geoposition==0.3.0
 django-media-manager==3.4.2
-django-modeltranslation==0.12.1
-django-mptt==0.8.7
-django-picklefield==1.0.0
-django-rest-swagger==0.3.10
-django-suit==0.2.23
+django-mptt==0.9.1
+django-rest-swagger==2.2.0
+django-select2==6.3.1
+django-suit==0.2.26
 django-suit-ckeditor==0.0.2
 django-suit-redactor==0.0.4
-djangorestframework==3.5.3
-djangorestframework-filters==0.9.1
+djangorestframework==3.9.0
 flower==0.9.2
-futures==3.2.0
-idna==2.7
-kombu==4.2.1
-numpy==1.14.5
-pytz==2018.5
+lxml==4.2.5
+mysqlclient==1.3.13
+numpy==1.15.2
+Pillow==5.3.0
+python-docx==0.8.7
+PyYAML==3.13
 requests==2.19.1
 scipy==1.1.0
-singledispatch==3.4.0.3
-six==1.11.0
-tornado==4.5.3
-typing==3.6.4
-urllib3==1.23
-vine==1.1.4
-wsgiref==0.1.2
 yandex.translate==0.3.5
-lxml==4.2.5
-python-docx==0.8.7
--e git+https://github.com/arybin93/django-formsetfield.git@38db18aa3d83d18cbfb3c743fc46e3462d128267#egg=django-formsetfield
+-e git+https://github.com/arybin93/django-formsetfield.git@38db18aa3d83d18cbfb3c743fc46e3462d128267#egg=django_formsetfield
+-e git+https://github.com/deschler/django-modeltranslation.git
