--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,6 @@
 celery==4.2.1
 Django==2.0
+django-picklefield==1.1.0
 django-ckeditor==5.6.1
 django-constance==2.3.1
 django-daterange-filter==1.3.0
@@ -21,10 +22,10 @@ lxml==4.2.5
 mysqlclient==1.3.13
 numpy==1.15.2
 Pillow==5.3.0
-python-docx==0.8.7
+python-docx
 PyYAML==3.13
 requests==2.19.1
 scipy==1.1.0
 yandex.translate==0.3.5
--e git+https://github.com/arybin93/django-formsetfield.git@38db18aa3d83d18cbfb3c743fc46e3462d128267#egg=django_formsetfield
--e git+https://github.com/deschler/django-modeltranslation.git
+-e git+https://github.com/arybin93/django-formsetfield.git#egg=django_formsetfield
+-e git+https://github.com/deschler/django-modeltranslation.git#egg=django-modeltranslation
