Support - Dockerize app for development: celery, flower

--- a/compose/local/nginx/dev.conf
+++ b/compose/local/nginx/dev.conf
@@ -21,6 +21,12 @@ http {
       alias /$1/$2;
     }
 
+    location /flower/ {
+        rewrite ^/flower/(.*)$ /$1 break;
+        proxy_pass http://flower:5555;
+        proxy_set_header Host $host;
+    }
+
     location / {
       proxy_redirect off;
       proxy_pass http://django;
