--- a/requirements.txt
+++ b/requirements.txt
@@ -17,6 +17,7 @@ django-suit==0.2.26
 django-suit-ckeditor==0.0.2
 django-suit-redactor==0.0.4
 djangorestframework==3.9.0
+django-request-logging
 flower==0.9.2
 lxml==4.2.5
 mysqlclient==1.3.13
