--- a/requirements_win.txt
+++ b/requirements_win.txt
@@ -1,5 +1,5 @@
 celery==4.2.1
-Django==2.0.10
+django==2.0.11
 django-picklefield==1.1.0
 django-ckeditor==5.6.1
 django-constance==2.3.1
@@ -14,15 +14,15 @@ django-rest-swagger==2.2.0
 django-suit==0.2.26
 django-suit-ckeditor==0.0.2
 django-suit-redactor==0.0.4
-djangorestframework==3.9.0
+djangorestframework==3.9.1
 django-request-logging
 flower==0.9.2
 lxml==4.2.5
 numpy==1.15.2
-Pillow==5.3.0
+Pillow==6.2.0
 python-docx
-PyYAML==3.13
-requests==2.19.1
+PyYAML==4.2b1
+requests==2.20.0
 scipy==1.1.0
 yandex.translate==0.3.5
 django-rest-auth
