--- a/.travis.yml
+++ b/.travis.yml
@@ -3,11 +3,16 @@ python:
   - "3.5" # current version
 services:
   - mysql
+env:
+  - DB_USER=root
+  - DB_PASSWORD=root
+  - DB_USER=localhost
 before_install:
+  - mysql -e 'CREATE DATABASE IF NOT EXISTS lmnad_db;'
   - python -m pip install --upgrade pip
 install:
   - pip install -r requirements.txt
 before_script:
- - mysql -e 'create database test;' -u root
+
 script:
   - python manage.py test
