--- a/.travis.yml
+++ b/.travis.yml
@@ -3,12 +3,15 @@ python:
   - "3.5" # current version
 services:
   - mysql
+env:
+  global:
+    - DJANGO_SETTINGS_MODULE="project.settings.travis_settings"
+  matrix:
+    - DB=mysql
 before_install:
-  - mysql -e 'CREATE DATABASE IF NOT EXISTS lmnad_db;'
+  - mysql -e 'CREATE DATABASE IF NOT EXISTS travis_ci_db;'
   - python -m pip install --upgrade pip
 install:
   - pip install -r requirements.txt
-before_script:
-
 script:
   - python manage.py test
