--- a/requirements.txt
+++ b/requirements.txt
@@ -28,6 +28,6 @@ requests==2.20.0
 scipy==1.1.0
 yandex.translate==0.3.5
 django-rest-auth
+django-modeltranslation
 -e git+https://github.com/arybin93/django-formsetfield.git#egg=django_formsetfield
--e git+https://github.com/deschler/django-modeltranslation.git#egg=django-modeltranslation
 -e git+https://github.com/applegrew/django-select2.git@82859121a6285d212d6d42ec8a9b65cf02ee5991#egg=django-select2
