--- a/requirements_win.txt
+++ b/requirements_win.txt
@@ -17,16 +17,16 @@ django-suit-redactor==0.0.4
 djangorestframework==3.9.1
 django-geoposition==0.3.0
 django-request-logging
-flower==0.9.2
+flower==0.9.5
 lxml==4.2.5
 numpy==1.15.2
 Pillow==6.2.0
-python-docx
+python-docx==0.8.10
 PyYAML==4.2b1
 requests==2.20.0
 scipy==1.1.0
 yandex.translate==0.3.5
-django-rest-auth
+django-rest-auth==0.9.5
 -e git+https://github.com/arybin93/django-formsetfield.git#egg=django_formsetfield
 -e git+https://github.com/deschler/django-modeltranslation.git#egg=django-modeltranslation
 -e git+https://github.com/applegrew/django-select2.git@82859121a6285d212d6d42ec8a9b65cf02ee5991#egg=django-select2
