--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -7,13 +7,13 @@ services:
     build:
       context: .
     environment:
-      - DJANGO_SECRET_KEY=(f!5kg5o*(&a3!j(#0ky)80&8bd+_7i!i^7*3lbbn2odsdas13212
-      - DJANGO_SETTINGS_MODULE=project.settings.server
-      - DB_HOST=db
-      - DB_USER=dev
-      - DB_PASSWORD=dev
-      - CELERY_BROKER=amqp://guest:guest@broker:5672
-      - CELERY_RESULT_BACKEND=rpc://
+      - DJANGO_SECRET_KEY=${DJANGO_SECRET_KEY}
+      - DJANGO_SETTINGS_MODULE=${DJANGO_SETTINGS_MODULE}
+      - DB_HOST=${DB_HOST}
+      - DB_USER=${DB_USER}
+      - DB_PASSWORD=${DB_PASSWORD}
+      - CELERY_BROKER_URL=${CELERY_BROKER_URL}
+      - CELERY_RESULT_BACKEND=${CELERY_RESULT_BACKEND}
     depends_on:
       - db
     restart: always
@@ -21,22 +21,26 @@ services:
     volumes:
       - static_data:/lmnad/project/static
       - media_data:/lmnad/project/media
+    networks:
+      - lmnad_net
 
   db:
     container_name: lmnad_mysql
     image: mysql:5.7
     environment:
       - MYSQL_DATABASE=lmnad_db
-      - MYSQL_ROOT_HOST=%
-      - MYSQL_ROOT_PASSWORD=root
-      - MYSQL_USER=dev
-      - MYSQL_PASSWORD=dev
+      - MYSQL_ROOT_HOST=${MYSQL_ROOT_HOST}
+      - MYSQL_ROOT_PASSWORD=${MYSQL_ROOT_PASSWORD}
+      - MYSQL_USER=${DB_USER}
+      - MYSQL_PASSWORD=${DB_PASSWORD}
     ports:
       - "3306:3306"
     volumes:
       - mysql_data:/var/lib/mysql
     restart: always
     command: ['mysqld', '--character-set-server=utf8mb4', '--collation-server=utf8mb4_unicode_ci']
+    networks:
+      - lmnad_net
 
   nginx:
     image: lmnad_nginx
@@ -52,6 +56,8 @@ services:
     depends_on:
       - django
       - flower
+    networks:
+      - lmnad_net
 
   celery:
     image: lmnad_base
@@ -60,33 +66,43 @@ services:
     container_name: lmnad_celery # rabbitmq:5672 && wait-for app:8000
     command: sh -c "wait-for broker:5672 && wait-for django:8000 -- celery worker -A project -l info"
     environment:
-      - CELERY_BROKER=amqp://guest:guest@broker:5672
-      - CELERY_RESULT_BACKEND=rpc://
-      - DB_HOST=db
-      - DB_USER=dev
-      - DB_PASSWORD=dev
+      - DJANGO_SETTINGS_MODULE=${DJANGO_SETTINGS_MODULE}
+      - DB_HOST=${DB_HOST}
+      - DB_USER=${DB_USER}
+      - DB_PASSWORD=${DB_PASSWORD}
+      - CELERY_BROKER_URL=${CELERY_BROKER_URL}
+      - CELERY_RESULT_BACKEND=${CELERY_RESULT_BACKEND}
     depends_on:
       - broker
       - django
       - db
     restart: always
+    networks:
+      - lmnad_net
 
   flower:
     image: mher/flower:0.9.4
     container_name: lmnad_flower
     command: flower --port=5555 --url_prefix=flower
     environment:
-      - CELERY_BROKER_URL=amqp://guest:guest@broker:5672
+      - CELERY_BROKER_URL=${CELERY_BROKER_URL}
     ports:
       - "5555:5555"
     depends_on:
       - broker
     restart: always
+    networks:
+      - lmnad_net
 
   broker:
     image: rabbitmq:3
     container_name: lmnad_rabbitmq
     restart: always
+    networks:
+      - lmnad_net
+
+networks:
+  lmnad_net:
 
 volumes:
   static_data:
