--- a/docker/nginx/lmnad.conf
+++ b/docker/nginx/lmnad.conf
@@ -3,7 +3,40 @@ upstream lmnad_django {
 }
 
 server {
-    listen 80;
+    listen 80 default_server;
+    server_name lmnad.nntu.ru;
+
+    location / {
+        rewrite ^ https://$host$request_uri? permanent;
+    }
+
+    location ^~ /.well-known {
+        allow all;
+        root  /data/letsencrypt/;
+    }
+}
+
+server {
+    listen 443 http2 ssl;
+    server_name lmnad.nntu.ru;
+
+    add_header                Strict-Transport-Security "max-age=31536000" always;
+
+    ssl_session_cache         shared:SSL:20m;
+    ssl_session_timeout       10m;
+
+    ssl_protocols             TLSv1 TLSv1.1 TLSv1.2;
+    ssl_prefer_server_ciphers on;
+    ssl_ciphers               "ECDH+AESGCM:ECDH+AES256:ECDH+AES128:!ADH:!AECDH:!MD5;";
+
+    ssl_stapling              on;
+    ssl_stapling_verify       on;
+    resolver                  8.8.8.8 8.8.4.4;
+
+    ssl_certificate /etc/letsencrypt/live/lmnad.nntu.ru/fullchain.pem;
+    ssl_certificate_key  /etc/letsencrypt/live/lmnad.nntu.ru/privkey.pem;
+    ssl_trusted_certificate /etc/letsencrypt/live/lmnad.nntu.ru/chain.pem;
+
     charset utf-8;
     client_max_body_size 10M;
 
@@ -24,9 +57,16 @@ server {
     }
 
     location / {
-        proxy_pass http://lmnad_django;
+        add_header 'Access-Control-Allow-Origin' "lmnad.nntu.ru";
+
+        if ( $host !~* ^(lmnad.nntu.ru|www.lmnad.nntu.ru)$ ) {
+            return 444;
+        }
+
         proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
         proxy_set_header Host $host;
         proxy_redirect off;
+        proxy_set_header X-Forwarded-Proto $scheme;
+        proxy_pass http://lmnad_django;
     }
 }
