--- a/requirements.txt
+++ b/requirements.txt
@@ -15,8 +15,9 @@ django-suit==0.2.26
 django-suit-ckeditor==0.0.2
 django-suit-redactor==0.0.4
 djangorestframework==3.9.1
-django-geoposition==0.3.0
-django-request-logging
+django-geoposition-2==0.3.11
+django-modeltranslation==0.13
+django-request-logging==0.7.2
 flower==0.9.5
 lxml==4.2.5
 mysqlclient==1.3.13
@@ -28,6 +29,5 @@ requests==2.20.0
 scipy==1.1.0
 yandex.translate==0.3.5
 django-rest-auth==0.9.5
+django-select2==6.3.2.dev2
 -e git+https://github.com/arybin93/django-formsetfield.git#egg=django_formsetfield
--e git+https://github.com/deschler/django-modeltranslation.git#egg=django-modeltranslation
--e git+https://github.com/applegrew/django-select2.git@82859121a6285d212d6d42ec8a9b65cf02ee5991#egg=django-select2
