--- a/requirements.txt
+++ b/requirements.txt
@@ -29,5 +29,5 @@ requests==2.20.0
 scipy==1.1.0
 yandex.translate==0.3.5
 django-rest-auth==0.9.5
-django-select2==6.3.2.dev2
 -e git+https://github.com/arybin93/django-formsetfield.git#egg=django_formsetfield
+-e git+https://github.com/applegrew/django-select2.git@82859121a6285d212d6d42ec8a9b65cf02ee5991#egg=django-select2
