--- a/requirements.txt
+++ b/requirements.txt
@@ -29,5 +29,5 @@ requests==2.20.0
 scipy==1.1.0
 yandex.translate==0.3.5
 django-rest-auth==0.9.5
-django-select2==6.3.2.dev2
+django-select2==6.3.1
 -e git+https://github.com/arybin93/django-formsetfield.git#egg=django_formsetfield
