Create model for conference

--- a/dev.env
+++ b/dev.env
@@ -29,3 +29,11 @@ YANDEX_TRANSLATE_API_KEY=dev
 # https://developers.google.com/maps/documentation/javascript/get-api-key
 # For using Google Map in admin panel
 GEOPOSITION_GOOGLE_MAPS_API_KEY=dev
+
+
+
+
+
+MYSQL_DATABASE=lmnad_db   # это название базы данных, которая будет создана при старте mysql контейнера 
+MYSQL_USER=dev  # пользователь, такой же как DB_USER, для доступа из web -> mysql
+MYSQL_PASSWORD=dev  # пароль, такой же как DB_PASSWORD
