LMNAD-70 Add section with conference, fix media locally

--- a/dev.env
+++ b/dev.env
@@ -23,6 +23,10 @@ CELERY_RESULT_BACKEND=rpc://                        # Backend
 MYSQL_ROOT_HOST=%
 MYSQL_ROOT_PASSWORD=root
 
+MYSQL_DATABASE=lmnad_db   # это название базы данных, которая будет создана при старте mysql контейнера 
+MYSQL_USER=dev            # пользователь, такой же как DB_USER, для доступа из web -> mysql
+MYSQL_PASSWORD=dev        # пароль, такой же как DB_PASSWORD
+
 # Using Yandex Translate https://yandex.com/dev/translate/
 YANDEX_TRANSLATE_API_KEY=dev
 
