--- a/docker/dev/Dockerfile
+++ b/docker/dev/Dockerfile
@@ -37,4 +37,4 @@ RUN mv wait-for /bin/wait-for && chmod +x /bin/wait-for && sed -i 's/\r//' /bin/
 
 EXPOSE 8001
 
-#CMD ["python", "manage.py", "runserver", "0.0.0.0:8001"]
+CMD ["python", "manage.py", "runserver", "0.0.0.0:8001"]
